# webapp/openapi.json
@@ -254,7 +254,7 @@
             "content": {
               "*/*": {
                 "schema": {
-                  "$ref": "#/components/schemas/PagedModelNetwork"
+                  "$ref": "#/components/schemas/PagedModelNetworkDto"
                 }
               }
             }
@@ -270,7 +270,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/Network"
+                "$ref": "#/components/schemas/NetworkDto"
               }
             }
           },
@@ -282,7 +282,7 @@
             "content": {
               "*/*": {
                 "schema": {
-                  "$ref": "#/components/schemas/Network"
+                  "$ref": "#/components/schemas/NetworkDto"
                 }
               }
             }
@@ -384,7 +384,7 @@
             "content": {
               "*/*": {
                 "schema": {
-                  "$ref": "#/components/schemas/Network"
+                  "$ref": "#/components/schemas/NetworkDto"
                 }
               }
             }
@@ -423,7 +423,7 @@
             "content": {
               "*/*": {
                 "schema": {
-                  "$ref": "#/components/schemas/Network"
+                  "$ref": "#/components/schemas/NetworkDto"
                 }
               }
             }
@@ -452,7 +452,7 @@
             "content": {
               "*/*": {
                 "schema": {
-                  "$ref": "#/components/schemas/Network"
+                  "$ref": "#/components/schemas/NetworkDto"
                 }
               }
             }
@@ -488,8 +488,28 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/Network"
+                    "$ref": "#/components/schemas/NetworkDto"
                   }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/rest/test": {
+      "get": {
+        "tags": [
+          "test-resource"
+        ],
+        "operationId": "test",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "string"
                 }
               }
             }
@@ -618,13 +638,9 @@
           }
         }
       },
-      "Network": {
+      "NetworkDto": {
         "type": "object",
         "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64"
-          },
           "network": {
             "type": "string"
           },
@@ -634,12 +650,16 @@
           "active": {
             "type": "boolean"
           },
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
           "imported": {
             "type": "boolean"
           }
         }
       },
-      "PagedModelNetwork": {
+      "PagedModelNetworkDto": {
         "type": "object",
         "properties": {
           "page": {
@@ -648,7 +668,7 @@
           "content": {
             "type": "array",
             "items": {
-              "$ref": "#/components/schemas/Network"
+              "$ref": "#/components/schemas/NetworkDto"
             }
           }
         }
